--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
   <section class="featured">
     <h2 data-translate="specials">Our Specials</h2>
-    <img src="images/Pizza.jpg" alt="Pizza" width="250">
-    <img src="images/Pasta.jpg" alt="Pasta" width="250">
-    <img src="images/Salad.jpg" alt="Salad" width="250">
+    <a href="menu.html#fast_food"><img src="images/Pizza.jpg" alt="Pizza" width="250"></a>
+    <a href="menu.html#desserts"><img src="images/Pasta.jpg" alt="Pasta" width="250"></a>
+    <a href="menu.html#main_courses"><img src="images/Salad.jpg" alt="Salad" width="250"></a>
   </section>
 
 
